--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
 </head>
   <body>
     <div id="luxury-bg">
-        <!-- Lighter grid for contrast -->
-        <div style="position: absolute; inset: 0; background-image: linear-gradient(to right, rgba(255,255,255,0.03) 1px, transparent 1px), linear-gradient(to bottom, rgba(255,255,255,0.03) 1px, transparent 1px); background-size: 64px 64px; mask-image: radial-gradient(circle at center, black 40%, transparent 100%);"></div>
+        <!-- Fundo liso -->
     </div>
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
